tests/compile_fail/units_in_dimension_expression_not_allowed.rs
#![allow(incomplete_features)]
#![feature(generic_const_exprs, adt_const_params)]

use ::diman::unit_system;
unit_system!(
    quantity_type Quantity,
    dimension_type Dimension,
    dimension Mass,
    unit kilograms: Mass,
    dimension Mass2 = kilograms,
);

fn main() {
}
